# one-share

./: package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.history/src/: discovery_20250220210144.rs  discovery_20250220210155.rs  discovery_20250220210313.rs  discovery_20250220210509.rs  discovery_20250220210742.rs  discovery_20250220211024.rs  discovery_20250220211147.rs  lib_20250218224418.rs  lib_20250218224444.rs
src-tauri/src/: discovery.rs  main.rs  screen_share.rs  transfer.rs
